--- a/BlogApp.API/BlogApp.API.csproj
+++ b/BlogApp.API/BlogApp.API.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\BlogApp.Business\BlogApp.Business.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
